Solve more sonar issues